syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content";

package com.glance.spaces.zapp.content;

import "com/glance/spaces/zapp/content/common/icon.proto";
import "com/glance/spaces/zapp/content/common/title.proto";
import "com/glance/spaces/zapp/content/common/element_cta.proto";
import "com/glance/spaces/zapp/content/common/media_content.proto";

message BgInfoXsElement {
  common.Title title = 1;
  content.common.Icon icon = 2;
  string main_text = 3;
  string info = 4;
  content.common.Icon bg_image = 5 [ deprecated = true ];
  string description = 6;
  CurrentWeather current_weather = 7;
  repeated HourlyWeather hourly_weather = 8;
  repeated DailyWeather daily_weather = 9;
  repeated Alerts alerts = 10;
  content.common.MediaContent bg_media = 11;
  common.ElementCta element_cta = 12;
}
message CurrentWeather {
  string temperature = 1;
  string temperature_unit = 2;
  string weather_condition = 3;
  content.common.Icon weather_condition_media = 4  [ deprecated = true ];
  content.common.Icon weather_condition_logo_url = 5  [ deprecated = true ];
  double precipitation = 6;
  double aqi_value = 7;
  string aqi_text = 8;
  content.common.MediaContent weather_condition_media_content = 9;
  content.common.MediaContent weather_condition_media_logo_content = 10;
}

message HourlyWeather {
  int64 timestamp = 1;
  string temperature = 2;
  string temperature_unit = 3;
  string weather_condition = 4;
  content.common.Icon weather_condition_media = 5 [ deprecated = true ];
  content.common.Icon weather_condition_logo_url = 6 [ deprecated = true ];
  double precipitation_probability = 7;
  content.common.MediaContent weather_condition_media_content = 8;
  content.common.MediaContent weather_condition_media_logo_content = 9;
}

message DailyWeather {
  int64 timestamp = 1;
  string min_temperature = 2;
  string max_temperature = 3;
  string temperature_unit = 4;
  string weather_condition = 5;
  content.common.Icon weather_condition_media = 6 [ deprecated = true ];
  content.common.Icon weather_condition_logo_url = 7 [ deprecated = true ];
  double precipitation_probability = 8;
  content.common.MediaContent weather_condition_media_content = 9;
  content.common.MediaContent weather_condition_media_logo_content = 10;
}

message Alerts {
  int64 start_time = 1;
  int64 end_time = 2;
  string source = 3;
  string title = 4;
  string description = 5;
  string severity = 6;
}